--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -7,9 +7,18 @@ engines:
       - ruby
   fixme:
     enabled: true
+  markdownlint:
+    enabled: true
+  reek:
+    enabled: true
   rubocop:
     enabled: true
 
 ratings:
    paths:
+   - lib/**/*
    - "**.rb"
+   - "**.md"
+
+exclude_paths:
+  - test/**/*
