--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,23 @@ rvm:
   - ruby-head
   - 2.3.0
   - 2.2.4
-  - 2.1.8
+  - 2.1.10
+
+before_install:
+  - gem update --system
+  - gem update bundler
+  - gem cleanup bundler
+
+gemfile:
+  - gemfiles/activerecord_4_0.gemfile
+  - gemfiles/activerecord_4_1.gemfile
+  - gemfiles/activerecord_4_2.gemfile
+  - gemfiles/activerecord_5_0.gemfile
+
+matrix:
+  exclude:
+    - gemfile: gemfiles/activerecord_5_0.gemfile
+      rvm: 2.1.10
 
 branches:
   only:
@@ -13,8 +29,6 @@ branches:
 sudo: false
 
 cache: bundler
-
-before_script: 'bundle update'
 
 notifications:
   email: false
