--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,25 @@
 language: ruby
+
 rvm:
+  - ruby-head
   - 2.3.0
-script: bundle exec rake
+  - 2.2.4
+  - 2.1.10
+
+before_install:
+  - gem update --system
+  - gem update bundler
+  - gem cleanup bundler
+
+bundler_args: --without tools --jobs=3 --retry=3
+
+branches:
+  only:
+    - master
+
+sudo: false
+
+cache: bundler
+
 notifications:
   email: false
