--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,7 @@ AllCops:
   Exclude:
     - "vendor/**/*"
     - "db/schema.rb"
+    - "*.gemspec"
   UseCache: false
 Style/CollectionMethods:
   Description: Preferred collection methods.
