--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - gem update bundler
   - gem cleanup bundler
 
-bundler_args: --without tools --jobs=3 --retry=3
+bundler_args: --without tools --trust-policy=MediumSecurity --jobs=3 --retry=3
 
 branches:
   only:
